--- a/Ingestion/templates/python.ecs.template.yaml
+++ b/Ingestion/templates/python.ecs.template.yaml
@@ -22,6 +22,7 @@ Metadata:
             - DataHubAccessToken
             - ExecutorId
             - ExistingDataHubAccessTokenSecretArn
+            - OptionalSecrets
         - Label:
             default: Ingestion Container Task
           Parameters:
@@ -52,6 +53,8 @@ Metadata:
           Default: "Unique Executor Id"
         ExistingDataHubAccessTokenSecretArn:
           Default: "Existing DataHub Access Token Secret Arn, if not specified, will use DataHubAccessToken"
+        OptionalSecrets:
+          Default: ""
         ImageTag:
           Default: "specify image tag, will use latest if not specified"
         TaskCpu:
@@ -77,6 +80,9 @@ Parameters:
   ExistingDataHubAccessTokenSecretArn:
     Type: "String"
     Description: "Existing DataHub Access Token Secret Arn, if not specified, will use DataHubAccessToken"
+  OptionalSecrets:
+    Type: "String"
+    Description: "A list of Optional AWS Secrets, for example: SECRET01|{secret01_arn},SECRET02|{secret02_arn}, supports up to 5 secrets"
   AwsAccessKeyId:
     Type: "String"
     NoEcho: Yes
@@ -102,7 +108,7 @@ Parameters:
     Description: "specify image tag, will use latest if not specified"
   TaskCpu:
     Type: "String"
-    Default: "1024"
+    Default: 1024
     Description: "The ECS Task CPU value, check https://docs.aws.amazon.com/AmazonECS/latest/developerguide/task-cpu-memory-error.html"
     AllowedValues:
       - 256
@@ -112,7 +118,7 @@ Parameters:
       - 4096
   TaskMemory:
     Type: "String"
-    Default: "2048"
+    Default: 2048
     Description: "The ECS Task Memory value (MiB), check https://docs.aws.amazon.com/AmazonECS/latest/developerguide/task-cpu-memory-error.html"
     AllowedValues:
       - 512
@@ -153,6 +159,12 @@ Conditions:
   UseDataHubAccessToken: !Not [!Equals [!Ref DataHubAccessToken, ""]]
   UseImageTag: !Not [!Equals [!Ref ImageTag, ""]]
   UseExecutorId: !Not [!Equals [!Ref ExecutorId, ""]]
+  UseOptionalSecret01: !Not [!Equals [!Select [0, !Split ["|", !Select [0, !Split [",", !Ref OptionalSecrets]]]], ""]]
+  UseOptionalSecret02: !Not [!Equals [!Select [0, !Split ["|", !Select [1, !Split [",", !Ref OptionalSecrets]]]], ""]]
+  UseOptionalSecret03: !Not [!Equals [!Select [0, !Split ["|", !Select [2, !Split [",", !Ref OptionalSecrets]]]], ""]]
+  UseOptionalSecret04: !Not [!Equals [!Select [0, !Split ["|", !Select [3, !Split [",", !Ref OptionalSecrets]]]], ""]]
+  UseOptionalSecret05: !Not [!Equals [!Select [0, !Split ["|", !Select [4, !Split [",", !Ref OptionalSecrets]]]], ""]]
+  
 
 Resources:
   DataHubAccessTokenSecret:
@@ -321,6 +333,31 @@ Resources:
           Secrets:
             - Name: DATAHUB_ACCESS_TOKEN
               ValueFrom: !If [UseExistingDataHubAccessTokenSecret, !Ref ExistingDataHubAccessTokenSecretArn, !Ref DataHubAccessTokenSecret]
+            - !If 
+              - UseOptionalSecret01
+              - Name: !Select [0, !Split ["|", !Select [0, !Split [",", !Ref OptionalSecrets]]]]
+                ValueFrom: !Select [1, !Split ["|", !Select [0, !Split [",", !Ref OptionalSecrets]]]]
+              - !Ref "AWS::NoValue"
+            - !If 
+              - UseOptionalSecret02
+              - Name: !Select [0, !Split ["|", !Select [1, !Split [",", !Ref OptionalSecrets]]]]
+                ValueFrom: !Select [1, !Split ["|", !Select [1, !Split [",", !Ref OptionalSecrets]]]]
+              - !Ref "AWS::NoValue"
+            - !If 
+              - UseOptionalSecret03
+              - Name: !Select [0, !Split ["|", !Select [2, !Split [",", !Ref OptionalSecrets]]]]
+                ValueFrom: !Select [1, !Split ["|", !Select [2, !Split [",", !Ref OptionalSecrets]]]]
+              - !Ref "AWS::NoValue"
+            - !If 
+              - UseOptionalSecret04
+              - Name: !Select [0, !Split ["|", !Select [3, !Split [",", !Ref OptionalSecrets]]]]
+                ValueFrom: !Select [1, !Split ["|", !Select [3, !Split [",", !Ref OptionalSecrets]]]]
+              - !Ref "AWS::NoValue"
+            - !If 
+              - UseOptionalSecret05
+              - Name: !Select [0, !Split ["|", !Select [4, !Split [",", !Ref OptionalSecrets]]]]
+                ValueFrom: !Select [1, !Split ["|", !Select [4, !Split [",", !Ref OptionalSecrets]]]]
+              - !Ref "AWS::NoValue"
           Environment: 
             - Name: DATAHUB_BASE_URL
               Value: !Ref DataHubBaseUrl
